# chalona-erp-clients

./: .gitignore  LICENSE  README.md
csharp/: .gitignore  EcfClient.sln  README.md  publicar.sh  publish-nuget.sh
csharp-driver/: ChalonaCsDriver.sln  publicar.sh
csharp-driver/driver_src/: DriverComprobantes.cs  MotorEcfV1.cs
csharp/driver_src/: DriverComprobantesV1.cs
dart-driver/: README.md  publicar.sh  pubspec.yaml
dart-driver/driver_src/: driver_ecf.dart  driver_prueba_comprobantes_v1.dart  (+4 more)
docs/: architecture.md  csharp-quickstart.md  dart-eval-limitations.md  dart-quickstart.md  fox-quickstart.md  install-skill.md  nodejs-quickstart.md  protocolo-http.md  python-quickstart.md  typescript-quickstart.md
fox/: DIAGNOSTICO-ERRORES-CHALONA-ECF.md  SCHEMA-CURSORES.md  chalona-ecf-driver-default.prg  chalona-ecf-integracion.html  chalona-ecf-loader.prg  chalona-ecf.ini.example  chalona-ecf.prg  erp-eventos-despacho.prg  publicar.sh
nodejs-driver/: README.md  package.json  publicar.sh
python-driver/: publicar.sh  pyproject.toml
python-driver/driver_src/: driver_comprobantes.py
python-driver/src/chalona_driver/: __init__.py  compiler.py  contract.py  ecf_client.py  exceptions.py  loader.py  motor.py  postgres_source.py
python-driver/src/chalona_driver/comprobantes/: __init__.py  base.py  datos.py  tipos_31_34.py  tipos_41_47.py  validation.py
python-driver/tests/: conftest.py  test_client.py  test_comprobantes.py
python-driver/tests/fixtures/: doc_tipo_31.json
sql/: schema.sql
typescript-driver/: package.json  publicar.sh  tsconfig.json
(+53 files in other folders)
