[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chalona-driver"
version = "0.1.0"
description = "Cliente Python con hot-reload de driver e-CF (espejo de dart-driver y csharp-driver)"
readme = "README.md"
requires-python = ">=3.9"

[tool.setuptools.packages.find]
where = ["src"]
