[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chalona-driver"
version = "0.1.0"
description = "Cliente Python para el API e-CF Chalona (motor estático + shell HTTP)"
readme = "README.md"
requires-python = ">=3.9"

[tool.setuptools.packages.find]
where = ["src"]
