[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chalona-driver"
version = "0.1.0"
description = "Cliente Python para el API e-CF Chalona (motor estático + shell HTTP)"
readme = "README.md"
requires-python = ">=3.9"

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
dev = ["pytest>=7"]

[tool.pytest.ini_options]
markers = [
    "integration: tests que requieren conectividad con ecf-service (login real)",
]
testpaths = ["tests"]
